--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "Todo",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "start": "node server.js",
+    "serve": "vue-cli-service serve",
     "build": "node build/build.js",
     "lint": "vue-cli-service lint",
     "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build"
