--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "node build/build.js",
-    "lint": "vue-cli-service lint",
-    "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build"
+    "lint": "vue-cli-service lint"
   },
   "engines": {
     "npm": ">=7.0.0",
